trunk/Archive2/21/defe5cc1731d16/output
main.cpp: In copy constructor 'foo::foo(const foo&)':
main.cpp:10:51: error: array used as initializer
     foo(const foo &fromParams): boo(fromParams.boo)
                                                   ^
